[metadata]

# Application name:
name=lizard

# Version number (initial):
# version=0.1.2

# Application author details:
author=yijie zeng
author_email=lizard@163.com

# Details
url=http://pypi.python.org/pypi/lizard/

[options]
packages=lizard

# Include additional files into the package
include_package_data=true

#
# license=LICENSE.txt
description=Reactive for server-side rendering

# long_description=open(README.txt).read()

# Dependent packages (distributions)
install_requires=
    django>=2.2
